dev/services/fastapi/ingress/ingress-path-cdk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: fastapi-dev
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:532673134317:certificate/905d0d16-87e8-4e89-a88c-b6053f472e81"
spec:
  tls:
  - hosts:
    - "dev-api.piercuta.com"
